testdata/baselines/reference/submodule/conformance/commonJSAliasedExport.errors.txt
commonJSAliasedExport.js(6,1): error TS2309: An export assignment cannot be used in a module with other exported elements.
commonJSAliasedExport.js(7,16): error TS2339: Property 'funky' does not exist on type '(ast: any) => any'.


==== bug43713.js (0 errors) ====
    const { funky } = require('./commonJSAliasedExport');
    /** @type {boolean} */
    var diddy
    var diddy = funky(1)
    
    
==== commonJSAliasedExport.js (2 errors) ====
    const donkey = (ast) =>  ast;
    
    function funky(declaration) {
        return false;
    }
    module.exports = donkey;
    ~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2309: An export assignment cannot be used in a module with other exported elements.
    module.exports.funky = funky;
                   ~~~~~
!!! error TS2339: Property 'funky' does not exist on type '(ast: any) => any'.
    